chore: generate voucher code
* chore: rectify voucher table migration and update testdata for customers

* chore: rename and add validationDate column table voucher

* chore: add createVoucher parameter to voucher generation
